# subtitle-generator

./: .dockerignore  .env.example  .gitignore  .scanignore  .semgrepignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Dockerfile.gpu  LICENSE  Makefile  PRODUCT_STRATEGY.md  README.md  ROADMAP.md  SECURITY.md  TEAM.md  alembic.ini  analyze.py  benchmark.py  check_interface.py  class.md  docker-compose.yml  entrypoint.sh  loadtest.py  main.py  nginx.conf  profiler.py  pyproject.toml  pytest.ini  requirements.txt
.githooks/: post-commit
.github/: CODEOWNERS  POSTMORTEM_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.meridian/: MEMORY.md  README.md  feedback_always_backup.md  feedback_author_disclosure.md  feedback_config_over_cli.md  feedback_delegate_no_bottleneck.md  feedback_detailed_logging.md  feedback_pr_review_process.md  feedback_vault_review_before_push.md  meridian_deployment_20260315.md  meridian_issues_tracker.md  meridian_server.md  meridian_session_20260315.md  project_cross_team_agreement.md
.sentinel/: MEMORY.md  README.md  access_privileges.md  feedback_author_disclosure.md  feedback_delegation.md  feedback_memory_cloud_backup.md  feedback_pr_attributes_mandatory.md  feedback_pr_review_process.md  project_ci_failures.md  project_distributed_system.md  project_pending_work.md  project_security_20260315.md  project_session4_20260315.md  project_session5_20260315.md  project_session_20260314.md  project_session_20260315.md  project_status_page.md  project_tls.md  project_tls_setup.md  (+3 more)
(+477 files in other folders)
