[project]
name = "subforge"
version = "2.5.0"
description = "AI-powered subtitle generator using faster-whisper"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "S602",   # subprocess-popen-with-shell-equals-true
    "S604",   # call-with-shell-equals-true
    "S608",   # hardcoded-sql-expression
    "TID253", # banned-module-level-imports
]
ignore = [
    "E501",   # line length — handled by formatter
    "B008",   # function call in default argument — FastAPI Depends()
    "UP007",  # X | None syntax — keep Optional for compat
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.flake8-tidy-imports]
banned-module-level-imports = [
    "torch",
    "faster_whisper",
    "ctranslate2",
    "numpy",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
markers = [
    "small: Fast unit tests, no I/O (< 60s)",
    "medium: Integration tests, localhost only (< 300s)",
    "large: End-to-end tests, full system (< 900s)",
]
